hphp/hack/test/typecheck/is_expression/abstract_final_class.php.exp
File "abstract_final_class.php", line 6, characters 16-16:
C is uninstantiable (Typing[4002])
File "abstract_final_class.php", line 3, characters 22-22:
Declaration is here
