hphp/hack/test/typecheck/is_expression/abstract_final_class.php
<?hh

abstract final class C {}

function f(mixed $x): bool {
  return $x is C;
}
